@@ -1,3 +1,10 @@
+2007-01-29  Benoît Dejean  <benoit@placenet.org>
+
+	* src/callbacks.cpp:
+	
+	Fixed help display by using GnomeVFS.
+	Closes #402013.
+
 2007-01-25  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
